<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/edit_text_expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_expense_name"
        android:autofillHints="username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_expense_amount"
        app:layout_constraintWidth_max="200dp"
        android:padding="8dp"
        android:minHeight="48dp"
        android:background="?android:attr/selectableItemBackground"/>

    <EditText
        android:id="@+id/edit_text_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_expense_amount"
        android:autofillHints="username"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_expense_name"
        app:layout_constraintBottom_toTopOf="@+id/button_save_expense"
        app:layout_constraintWidth_max="200dp"
        android:padding="8dp"
        android:minHeight="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/button_save_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save_expense"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_expense_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:minHeight="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Main"
        app:layout_constraintTop_toBottomOf="@+id/button_save_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
